--- a/index.html
+++ b/index.html
@@ -779,10 +779,10 @@
           'Authorization': `Bearer ${authToken}`
         },
         body: JSON.stringify({
-          paymentFormUrl,
-          email,
-          name,
-          auctionTitle,
+          paymentFormUrl: paymentFormUrl,
+          consignorEmail: email,
+          consignorName: name,
+          auctionTitle: auctionTitle,
           sentBy: username
         })
       })
@@ -863,11 +863,11 @@
       const retrieveButton = document.getElementById('retrieveStatement');
       if (retrieveButton) {
         retrieveButton.disabled = true;
-        retrieveButton.innerHTML = '<svg class="animate-spin -ml-1 mr-2 h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg> Retrieving Data...';
+        retrieveButton.innerHTML = '<svg class="animate-spin -ml-1 mr-2 h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg> Retrieving Data...';
       }
       
       // Call the get-consignor-data function with credentials
-      return fetch('/.netlify/functions/get-consignor-data', {
+      fetch('/.netlify/functions/get-consignor-data', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
