feat: Update check diagram and remove account type field

--- a/index.html
+++ b/index.html
@@ -403,26 +403,10 @@
                 </div>
               </div>
               
-              <div class="mb-4">
-                <label class="block text-gray-700 font-medium mb-1" for="accountType">
-                  Account Type <span class="text-red-500">*</span>
-                </label>
-                <select 
-                  id="accountType"
-                  name="accountType" 
-                  class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-secondary focus:border-transparent transition"
-                >
-                  <option value="">Select Account Type</option>
-                  <option value="checking">Checking</option>
-                  <option value="savings">Savings</option>
-                  <option value="business">Business</option>
-                </select>
-              </div>
-              
               <div class="bg-gray-100 p-4 rounded-md mb-4">
                 <h3 class="font-medium text-primary mb-2">Where to Find Your Routing and Account Numbers</h3>
                 <div class="flex items-center justify-center mb-3">
-                  <img src="https://placehold.co/600x200/e2e8f0/1e293b?text=Check+Diagram" alt="Check diagram showing routing and account number locations" class="max-w-full h-auto rounded" />
+                  <img src="/images/check-diagram.png" alt="Check diagram showing routing and account number locations" class="max-w-full h-auto rounded border" />
                 </div>
                 <ul class="text-sm text-gray-700 space-y-1">
                   <li>• The routing number is the 9-digit number on the bottom left of your check.</li>
